[package]
name = "ws_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version="0.17.1", features=["native-tls"]}
tungstenite = {version="0.17.1"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.2.2"
tokio-stream = "0.1.8"
futures-util = "0.3.21"
thiserror = "1.0.31"